--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-
   "name": "angular-crud",
   "version": "1.0.0",
   "description": "Angular CURD operations",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/harendersingh15/node-angular-crud/issues"
   },
-  "homepage": "https://github.com/harendersingh15/node-angular-crud#readme"
+  "homepage": "https://github.com/harendersingh15/node-angular-crud#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.1.2",
+    "morgan": "^1.9.0"
+  }
 }
